# PyCFF

./: .gitignore  Flow-PressureDrop.xls  Flow-PressureDrop.xlsx  INSTALL.md  INSTALL.zh_CN.md  MANIFEST.in  QuickStart.md  QuickStart.zh_CN.md  README.md  README.zh_CN.md  application.py  build.py  cff.py  clevertw.py  compile.py  file-version-info.txt  form.ui  py_build.py  pyproject.toml  requirements.txt  resource.qrc  setup.py  setup_pyd.py  setup_whl.py  widget.py
.github/workflows/: python-publish.yml  test-python-publish.yml
pycff/: __main__.py  application.py  cff.py  clevertw.py  clevertwitem.py  form.ui  setup.py  widget.py
pycff/translations/: PyCFF_en.ts  PyCFF_zh_CN.ts
translations/: PyCFF_en.qm  PyCFF_en.ts  PyCFF_zh_CN.qm  PyCFF_zh_CN.ts
