[project]
name = "PyCFF"
version = "1.1.7"
description = "A function fitting tool"
readme = "README.md"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Andrew Moa", email = "Andrew.Moa2005@163.com" }]
requires-python = ">=3.8"
keywords = ["PySide6", "application", "widget"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.26.0", "scipy>=1.12.0", "pyside6>=6.6.0"]

[tool.pyside6-project]
files = [
    "pycff/__init__.py",
    "pycff/__main__.py",
    "pycff/resource.qrc",
    "pycff/application.py",
    "pycff/form.ui",
    "pycff/widget.py",
    "pycff/clevertw.py",
    "pycff/cff.py",
]

[tool.setuptools.packages]
find = {}

[project.urls]
Homepage = "https://github.com/AndrewMoa2005/PyCFF"
Repository = "https://github.com/AndrewMoa2005/PyCFF.git"

[tool.setuptools]
include-package-data = true

[project.gui-scripts]
pycff = "pycff.__main__:main"

[build-system]
requires = ["setuptools", "cython"]
