[project]
name = "PyCFF"
version = "1.1.10"
description = "A function fitting tool"
readme = "README.md"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Andrew Moa", email = "Andrew.Moa2005@163.com" }]
requires-python = ">=3.8"
keywords = ["PySide6", "application", "widget"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy", "scipy", "PySide6"]

[tool.pyside6-project]
files = [
    "pycff/__init__.py",
    "pycff/__main__.py",
    "pycff/resource.qrc",
    "pycff/application.py",
    "pycff/form.ui",
    "pycff/widget.py",
    "pycff/clevertw.py",
    "pycff/cff.py",
]

[tool.setuptools.packages]
find = {}

[project.urls]
Homepage = "https://github.com/AndrewMoa2005/PyCFF"
Repository = "https://github.com/AndrewMoa2005/PyCFF.git"

[tool.setuptools]
include-package-data = true

[project.gui-scripts]
pycff = "pycff.__main__:main"

[build-system]
requires = ["setuptools", "cython"]
